increasing code coverage