@@ -9,17 +9,21 @@ import com.github.arhor.aws.graphql.federation.comments.generated.graphql.types.
 import com.github.arhor.aws.graphql.federation.comments.generated.graphql.types.UpdateCommentInput;
 import com.github.arhor.aws.graphql.federation.comments.service.mapper.CommentMapper;
 import com.github.arhor.aws.graphql.federation.common.exception.EntityNotFoundException;
+import com.github.arhor.aws.graphql.federation.common.exception.EntityOperationRestrictedException;
 import com.github.arhor.aws.graphql.federation.common.exception.Operation;
 import com.github.arhor.aws.graphql.federation.starter.security.CurrentUserDetails;
 import com.github.arhor.aws.graphql.federation.starter.testing.ConstantsKt;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.springframework.dao.OptimisticLockingFailureException;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -33,37 +37,102 @@ import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 
-@SuppressWarnings("SequencedCollectionMethodCanBeUsed")
 class CommentServiceImplTest {
 
-    private static final UUID COMMENT_1_ID = ConstantsKt.getTEST_1_UUID_VAL();
-    private static final UUID COMMENT_2_ID = ConstantsKt.getTEST_2_UUID_VAL();
-    private static final UUID COMMENT_3_ID = ConstantsKt.getTEST_3_UUID_VAL();
-    private static final UUID USER_ID = ConstantsKt.getZERO_UUID_VAL();
-    private static final UUID POST_ID = ConstantsKt.getOMNI_UUID_VAL();
+    private static UUID COMMENT_1_ID = ConstantsKt.getTEST_1_UUID_VAL();
+    private static UUID COMMENT_2_ID = ConstantsKt.getTEST_2_UUID_VAL();
+    private static UUID COMMENT_3_ID = ConstantsKt.getTEST_3_UUID_VAL();
+    private static UUID USER_ID = ConstantsKt.getZERO_UUID_VAL();
+    private static UUID POST_ID = ConstantsKt.getOMNI_UUID_VAL();
 
     private final CommentRepository commentRepository = mock();
     private final CommentMapper commentMapper = mock();
     private final StateGuard stateGuard = mock();
 
-    private CommentServiceImpl commentService;
+    private final CommentServiceImpl commentService = new CommentServiceImpl(
+        commentRepository,
+        commentMapper,
+        stateGuard
+    );
 
-    @BeforeEach
-    void setUp() {
-        commentService = new CommentServiceImpl(
+    @BeforeAll
+    static void setupClass() {
+        COMMENT_1_ID = ConstantsKt.getTEST_1_UUID_VAL();
+        COMMENT_2_ID = ConstantsKt.getTEST_2_UUID_VAL();
+        COMMENT_3_ID = ConstantsKt.getTEST_3_UUID_VAL();
+        USER_ID = ConstantsKt.getZERO_UUID_VAL();
+        POST_ID = ConstantsKt.getOMNI_UUID_VAL();
+    }
+
+    @AfterAll
+    static void closeClass() {
+        COMMENT_1_ID = COMMENT_2_ID = COMMENT_3_ID = USER_ID = POST_ID = null;
+    }
+
+    @AfterEach
+    void close() {
+        verifyNoMoreInteractions(
             commentRepository,
             commentMapper,
             stateGuard
         );
     }
 
-    @AfterEach
-    void tearDown() {
-        verifyNoMoreInteractions(
-            commentRepository,
-            commentMapper,
-            stateGuard
-        );
+    @Nested
+    @DisplayName("Method getCommentById")
+    class GetCommentByIdTest {
+        @Test
+        void should_return_a_comment_by_its_ID_when_the_comment_exists() {
+            // Given
+            final var comment = CommentEntity.builder().id(COMMENT_1_ID).userId(USER_ID).postId(POST_ID).build();
+            final var expectedComment = Comment.newBuilder().build();
+
+            given(commentRepository.findById(any()))
+                .willReturn(Optional.of(comment));
+            given(commentMapper.mapToDto(any()))
+                .willReturn(expectedComment);
+
+            // When
+            final var result = commentService.getCommentById(comment.id());
+
+            // Then
+            then(commentRepository)
+                .should()
+                .findById(comment.id());
+            then(commentMapper)
+                .should()
+                .mapToDto(comment);
+
+            assertThat(result)
+                .isNotNull()
+                .isEqualTo(expectedComment);
+        }
+
+        @Test
+        void should_throw_EntityNotFoundException_when_the_comment_does_not_exist() {
+            // Given
+            final var expectedEntity = COMMENT.TYPE_NAME;
+            final var expectedCondition = COMMENT.Id + " = " + COMMENT_2_ID;
+            final var expectedOperation = Operation.LOOKUP;
+
+            given(commentRepository.findById(any()))
+                .willReturn(Optional.empty());
+
+            // When
+            final var result = catchException(() -> commentService.getCommentById(COMMENT_2_ID));
+
+            // Then
+            then(commentRepository)
+                .should()
+                .findById(COMMENT_2_ID);
+
+            assertThat(result)
+                .isNotNull()
+                .asInstanceOf(type(EntityNotFoundException.class))
+                .returns(expectedEntity, from(EntityNotFoundException::getEntity))
+                .returns(expectedCondition, from(EntityNotFoundException::getCondition))
+                .returns(expectedOperation, from(EntityNotFoundException::getOperation));
+        }
     }
 
     @Nested
@@ -86,7 +155,7 @@ class CommentServiceImplTest {
                 .willAnswer((__) -> commentEntities.stream());
 
             given(commentMapper.mapToDto(any()))
-                .willAnswer((__) -> commentDtos.get(0))
+                .willAnswer((__) -> commentDtos.getFirst())
                 .willAnswer((__) -> commentDtos.get(1));
 
             // When
@@ -131,6 +200,32 @@ class CommentServiceImplTest {
     }
 
     @Nested
+    @DisplayName("Method getCommentsNumberByPostIds")
+    class GetCommentsNumberByPostIdsTest{
+        @Test
+        void should_simply_call_getCommentsNumberByPostIds_and_return_its_result() {
+            // Given
+            final var commentIds = List.of(POST_ID);
+            final var expectedCounts = Map.of(POST_ID, 10);
+
+            given(commentRepository.countCommentsByPostIds(any()))
+                .willReturn(expectedCounts);
+
+            // When
+            final var result = commentService.getCommentsNumberByPostIds(commentIds);
+
+            // Then
+            then(commentRepository)
+                .should()
+                .countCommentsByPostIds(commentIds);
+
+            assertThat(result)
+                .isNotNull()
+                .isEqualTo(expectedCounts);
+        }
+    }
+
+    @Nested
     @DisplayName("Method getCommentsByUserIds")
     class GetCommentsByUserIdsMethodTest {
         @Test
@@ -150,7 +245,7 @@ class CommentServiceImplTest {
                 .willAnswer((__) -> commentEntities.stream());
 
             given(commentMapper.mapToDto(any()))
-                .willAnswer((__) -> commentDtos.get(0))
+                .willAnswer((__) -> commentDtos.getFirst())
                 .willAnswer((__) -> commentDtos.get(1));
 
             // When
@@ -214,7 +309,7 @@ class CommentServiceImplTest {
                 .willAnswer((__) -> commentEntities.stream());
 
             given(commentMapper.mapToDto(any()))
-                .willAnswer((__) -> commentDtos.get(0))
+                .willAnswer((__) -> commentDtos.getFirst())
                 .willAnswer((__) -> commentDtos.get(1));
 
             // When
@@ -389,6 +484,121 @@ class CommentServiceImplTest {
             assertThat(result)
                 .isNotNull()
                 .isEqualTo(commentDto);
+        }
+
+        @Test
+        void should_call_CommentRepository_save_when_existing_comment_was_modified() {
+            // Given
+            final var input =
+                UpdateCommentInput.newBuilder()
+                    .id(COMMENT_1_ID)
+                    .content("definetely new content")
+                    .build();
+            final var existingComment =
+                CommentEntity.builder()
+                    .userId(USER_ID)
+                    .postId(POST_ID)
+                    .build();
+            final var updatedComment =
+                existingComment.toBuilder()
+                    .content(input.getContent())
+                    .build();
+
+            final var commentDto = Comment.newBuilder().build();
+
+            given(commentRepository.findById(any()))
+                .willReturn(Optional.of(existingComment));
+
+            given(commentRepository.save(any()))
+                .willAnswer((call) -> call.getArgument(0));
+
+            given(commentMapper.mapToDto(any()))
+                .willReturn(commentDto);
+
+            // When
+            final var result = commentService.updateComment(input, actor(USER_ID));
+
+            // Then
+            then(commentRepository)
+                .should()
+                .findById(input.getId());
+
+            then(stateGuard)
+                .should()
+                .ensureCommentsEnabled(COMMENT.TYPE_NAME, Operation.UPDATE, StateGuard.Type.USER, USER_ID);
+
+            then(stateGuard)
+                .should()
+                .ensureCommentsEnabled(COMMENT.TYPE_NAME, Operation.UPDATE, StateGuard.Type.POST, POST_ID);
+
+            then(commentRepository)
+                .should()
+                    .save(updatedComment);
+
+            then(commentMapper)
+                .should()
+                .mapToDto(updatedComment);
+
+            assertThat(result)
+                .isNotNull()
+                .isEqualTo(commentDto);
+        }
+
+        @Test
+        void should_throw_EntityOperationRestrictedException_when_repository_thrown_OptimisticLockingFailureException() {
+            // Given
+            final var input =
+                UpdateCommentInput.newBuilder()
+                    .id(COMMENT_1_ID)
+                    .content("definetely new content")
+                    .build();
+            final var existingComment =
+                CommentEntity.builder()
+                    .id(COMMENT_1_ID)
+                    .userId(USER_ID)
+                    .postId(POST_ID)
+                    .build();
+            final var updatedComment =
+                existingComment.toBuilder()
+                    .content(input.getContent())
+                    .build();
+
+            final var expectedEntity = COMMENT.TYPE_NAME;
+            final var expectedCondition = COMMENT.Id + " = " + input.getId() + " (updated concurrently)";
+            final var expectedOperation = Operation.UPDATE;
+
+            given(commentRepository.findById(any()))
+                .willReturn(Optional.of(existingComment));
+
+            given(commentRepository.save(any()))
+                .willThrow(OptimisticLockingFailureException.class);
+
+            // When
+            final var result = catchException(() -> commentService.updateComment(input, actor(USER_ID)));
+
+            // Then
+            then(commentRepository)
+                .should()
+                .findById(input.getId());
+
+            then(stateGuard)
+                .should()
+                .ensureCommentsEnabled(COMMENT.TYPE_NAME, Operation.UPDATE, StateGuard.Type.USER, USER_ID);
+
+            then(stateGuard)
+                .should()
+                .ensureCommentsEnabled(COMMENT.TYPE_NAME, Operation.UPDATE, StateGuard.Type.POST, POST_ID);
+
+            then(commentRepository)
+                .should()
+                .save(updatedComment);
+
+            assertThat(result)
+                .isNotNull()
+                .asInstanceOf(type(EntityOperationRestrictedException.class))
+                .returns(expectedEntity, from(EntityOperationRestrictedException::getEntity))
+                .returns(expectedCondition, from(EntityOperationRestrictedException::getCondition))
+                .returns(expectedOperation, from(EntityOperationRestrictedException::getOperation));
         }
     }
 
